# foresight-r

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
config/aces/mimic4ed-benchmark/: hospitalisation.yaml
config/aces/mimic4ed_benchmark/: critical_outcome_icu_12h.yaml  note.md
config/inference/: run_inference.yaml
config/meds/mimic/transforms/: extract_MIMIC.yaml
config/models/: _defaults.yaml
config/models/zero_shot/: run_inference.yaml  thinking.yaml
foresight_r/aces/: __init__.py  combine_critical_outcome.py  validate_prediction_times.py
foresight_r/aces/config/mimic4ed-benchmark/: critical_outcome_hospital_mortality.yaml
foresight_r/inference/: __init__.py  prompt_template.py  run_inference.py
foresight_r/inference/config/: __init__.py  run_inference.yaml  thinking.yaml
foresight_r/meds/: __init__.py
foresight_r/meds/mimic/: pre_MEDS.py
foresight_r/meds/mimic/config/transforms/: pre_MEDS.yaml
foresight_r/meds/nl_dataset/: __init__.py  convert_to_markdown.py  create_nl_dataset.py
foresight_r/meds/nl_dataset/config/: __init__.py  create_nl_dataset.yaml
foresight_r/meds/transforms/: __init__.py  convert_to_markdown.py
foresight_r/models/: __init__.py
foresight_r/models/utils/: __init__.py  dataset.py  device.py  model_loading.py  prompt.py  shard_processor.py
foresight_r/models/zero_shot/: __init__.py  run_inference.py
foresight_r/transforms/: __init__.py  add_time_column.py  append_values.py  calculate_age.py  clean_code.py  clean_string_columns.py  create_prefix_column.py  drop_by_regex.py  filter_by_text_value.py  filter_codes_by_regex.py  filter_null_numeric_value.py  filter_null_text_value.py  filter_null_values.py  order_by_prefix.py  order_events.py  replace_code_with_text_value_by_prefix.py  save_as_hf_dataset.py
notebooks/: analysis.ipynb
scripts/aces/mimic4ed-benchmark/: config.yaml  critical_outcome_icu_12h.yaml  ed_reattendance.yaml
scripts/aces/sample/: readmission.yaml
scripts/meds/: local_parallelism_runner.yaml
scripts/meds/mimic/: README.md  pre_MEDS.py
scripts/meds/mimic/configs/: event_configs-ed-ethos.yaml  event_configs-ed-foresight copy.yaml  event_configs-ed-foresight-v2.yaml  event_configs-ed-foresight.yaml  event_configs-ed-nl.yaml  event_configs-ed.yaml  extract_MIMIC.yaml  meds_to_markdown.yaml  pre_MEDS.yaml
scripts/sandbox/: convert_patient_to_md.py  create_hf_dataset.py
src/: __init__.py  config.py  data_loader.py  features.py  models.py  visualization.py
tests/: test_create_prefix_column.py  test_features.py
tests/inference/: test_prompt_template.py
tests/meds/transforms/: __init__.py  test_add_time_column.py  test_append_values.py  test_calculate_age.py  test_clean_string_columns.py  test_clean_string_columns_multi_col.py  test_drop_by_regex.py  test_filter_by_text_value.py  test_order_by_prefix.py
tests/models/utils/: __init__.py  test_prompt.py
tests/transforms/: test_add_time_column.py  test_append_values.py  test_calculate_age.py  test_clean_code.py  test_clean_string_columns.py  test_clean_string_columns_multi_col.py  test_create_prefix_column.py  test_drop_by_regex.py  test_filter_by_text_value.py  test_filter_codes_by_regex.py  test_filter_null_numeric_value.py  test_filter_null_text_value.py  test_filter_null_values.py  test_order_by_prefix.py  test_replace_code_with_text_value_by_prefix.py
