[project]
name = "foresight-r"
version = "0.1.0"
description = "Data science project for predictive analytics and modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "jupyter>=1.0.0",
    "ipython>=8.20.0",
    "plotly>=5.18.0",
    "scipy>=1.12.0",
    "polars>=1.26.0,<=1.27.9",
    "loguru>=0.7.0",
    "hydra-core>=1.3.0",
    "meds-transforms[local-parallelism]==0.1.1",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
ml = [
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "optuna>=3.5.0",
]
deep-learning = [
    "torch>=2.2.0",
    "tensorflow>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
custom-meds-transform-clean-code = "foresight_r.transforms.clean_code:main"
custom-meds-transform-create-prefix-column = "foresight_r.transforms.create_prefix_column:main"
custom-meds-transform-calculate-age = "foresight_r.transforms.calculate_age:main"
custom-meds-transform-add-time-column = "foresight_r.transforms.add_time_column:main"
custom-meds-transform-filter-null-numeric-value = "foresight_r.transforms.filter_null_numeric_value:main"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
